# AndroidJetpack

./: .gitignore  README.md  build.gradle  build.gradle.kts  build.gradle_new.kts  gradle.properties  settings.gradle  settings.gradle.kts  三方库.md
BuildSrc/: build.gradle.kts
app/: build.gradle  build.gradle.kts
app-c++/: build.gradle.kts
app-compose/: build.gradle.kts
app-py/: build.gradle.kts
app-system/: build.gradle.kts
apt/: apt.md
apt/apt-annotation/: build.gradle.kts
apt/apt-compiler/: build.gradle.kts
apt/apt-main/: build.gradle.kts
ble/: ANALYSIS.md  BLE_TECHNOLOGY_ECOSYSTEM.md  BLE技术生态.md  BLE配网技术分析.md  NORDIC_BLE_DEEP_DIVE.md  Nordic_BLE库深度分析.md  README.md  ble.md  build.gradle.kts
ble/ble-client/: build.gradle.kts
ble/ble-server/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
dagger/: build.gradle.kts  dagger.md
di/: Javassist.md
di/dagger/: build.gradle.kts  dagger.md
di/hilt/: build.gradle.kts  hilt.md
extras/libc++/: build.gradle.kts
extras/libpy/: android-python.md  build.gradle.kts
gradle/: app_main_build.gradle.kts  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hilt/: build.gradle.kts  hilt.md
kotlin/kotlin-core/: build.gradle.kts
kotlin/kotlin-java/: kotlin.md  (+1 more)
libcore/: build.gradle.kts
log-runtime/: build.gradle.kts
native/jnibase/src/main/cpp/: CMakeLists.txt  DParcel.cpp  DParcel.h  com_mic_jnibase_DParcel_MyObject.h  com_mic_jnibase_NativeLib.h  com_mic_jnibase_NativeLib_FmodCallback.h  jnibase.cpp  x3_fmod.cpp  x4_jni_register.cpp  x6_parcel.cpp  xlog.h
native/n3_ffmpeg/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  FFmpegPlayer.cpp  FFmpegPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
native/n3_ffmpeg/src/main/cpp/include/libavutil/: ffversion.h
native/n6_opengl/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
netconfig/: SoftAp.md  ble.md  build.gradle.kts  weichat_ble配网.md
pkey/: platform.jks  platform.pk12
python/: 2增加音量.sh  3重启设备.sh
shell/: p_arch.sh  p_card.sh  p_code.sh  p_pullso.sh  p_serial.sh  p_trace.md  p_trace.sh
template/: build.gradle.kts
xdagger/: build.gradle.kts
xhilt/: build.gradle.kts
(+1747 files in other folders)
